<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bg_fragment"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/mfy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#BCC2E1"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yoshlik_mfy"
                    android:textStyle="bold"
                    android:textColor="#0066AC"
                    android:gravity="center"
                    android:textSize="24sp"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="45dp"
            android:layout_marginLeft="30dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_nuroniylar"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:text="@string/nuroniylar"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:backgroundTint="@null" />

            <LinearLayout
                android:id="@+id/ll_nuroniy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_yolgiz_live_qari"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="30dp"
                    android:background="@drawable/bg_button"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yolg_iz_yashaydigan"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_sahovat_muruvvat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="30dp"
                    android:background="@drawable/bg_button"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sahovat_va_muruvvat_uylarida_uylarida_yashaydigan_qariyalar"
                        android:textSize="18sp"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_kam_taminlangan_oila"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="30dp"
                    android:background="@drawable/bg_button"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kam_taminlangan_oilada_yashovchi_qariyalar"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_ogir_tashxisli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="30dp"
                    android:background="@drawable/bg_button"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/og_ir_tashxisli_kasalligi_bor_qariyalar"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_davlat_mukofot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="30dp"
                    android:background="@drawable/bg_button"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/davlat_mukofoti_bor_qariyalar"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_uzb_hero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="30dp"
                    android:background="@drawable/bg_button"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/uzbekiston_qahramoni"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_poor"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/xotin_qizlar_faoli"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:backgroundTint="@null" />

            <LinearLayout
                android:id="@+id/ll_poor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_button"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yolg_iz_yashaydigan"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_button"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yolg_iz_yashaydigan"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_button"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yolg_iz_yashaydigan"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_button"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yolg_iz_yashaydigan"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_yetim"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="Yetimlar"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:backgroundTint="@null" />

            <LinearLayout
                android:id="@+id/ll_yetim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="30dp"
                    android:background="@drawable/bg_button"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yolg_iz_yashaydigan"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="30dp"
                    android:background="@drawable/bg_button"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yolg_iz_yashaydigan"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="30dp"
                    android:background="@drawable/bg_button"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yolg_iz_yashaydigan"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="30dp"
                    android:background="@drawable/bg_button"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yolg_iz_yashaydigan"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:backgroundTint="#0066AC"
        app:background="@color/white"
        app:tint="@color/white"
        android:src="@drawable/ic_add"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>