<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_fragment"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#BCC2E1"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="30dp"
                    android:layout_gravity="center"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_arrow_back"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Ma'lumotlarni joylashtirish"
                    android:textStyle="bold"
                    android:textColor="#0066AC"
                    android:gravity="center"
                    android:textSize="24sp"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_nuroniylar"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:text="@string/nuroniylar"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:backgroundTint="@null" />
        <LinearLayout
            android:id="@+id/ll_nuroniy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_yolgiz_live_qari"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_checkbox"
                android:layout_marginHorizontal="30dp"
                android:orientation="vertical">


                <CheckBox
                    android:id="@+id/cb_yolgiz_live"
                    android:text="@string/yolg_iz_yashaydigan"
                    style="@style/AnswerTheme"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_sahovat_muruvvat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/bg_checkbox"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_sahobvat_muruvvat"
                    android:text="@string/sahovat_va_muruvvat_uylarida_uylarida_yashaydigan_qariyalar"
                    style="@style/AnswerTheme"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_kam_taminlangan_oila"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/bg_checkbox"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_kam_taminlangan"
                    android:text="@string/kam_taminlangan_insonlar"
                    style="@style/AnswerTheme"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_ogir_tashxisli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/bg_checkbox"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_ogir_tashxisli"
                    android:text="@string/og_ir_tashxisli_kasalligi_bor_qariyalar"
                    style="@style/AnswerTheme"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_davlat_mukofot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/bg_checkbox"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_davlat_mukofoti"
                    android:text="@string/davlat_mukofoti_bor_qariyalar"
                    style="@style/AnswerTheme"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_uzb_hero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/bg_checkbox"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_uzb_hero"
                    android:text="@string/uzbekiston_qahramoni"
                    style="@style/AnswerTheme"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_poor"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/kam_taminlangan_insonlar"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:backgroundTint="@null" />
        <LinearLayout
            android:id="@+id/ll_poor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_button"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yolg_iz_yashaydigan"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_button"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yolg_iz_yashaydigan"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_button"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yolg_iz_yashaydigan"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_button"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yolg_iz_yashaydigan"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_yetim"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="Yetimlar"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:backgroundTint="@null" />
        <LinearLayout
            android:id="@+id/ll_yetim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/bg_button"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yolg_iz_yashaydigan"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/bg_button"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yolg_iz_yashaydigan"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/bg_button"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yolg_iz_yashaydigan"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/bg_button"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yolg_iz_yashaydigan"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>


</LinearLayout>